# MachineLearning

./: .gitignore
BayesClassifier/: CMakeLists.txt  README.md
BayesClassifier/include/naive_bayes/: distribution.h  gaussian.h  naive_bayes.h  rayleigh.h
BayesClassifier/include/pipeline/: pipeline_helpers.h  prediction_helpers.h
BayesClassifier/src/core/: gaussian.cpp  naive_bayes.cpp  prediction_helpers.cpp  rayleigh.cpp
BayesClassifier/src/pipeline/: pipeline_helpers.cpp
BayesClassifier/src/test/: tester.cpp
BayesClassifier/tools/: README.md  analyze_predictions.py
BayesClassifier/tools/scripts/: plot_feature_pdfs.py
BayesClassifier/tools/tests/: run_wine_pdfs.py
ant_bayes_live/: README.md  build.properties  build.xml
ant_bayes_live/app/include/: ant_bayes_live.h
ant_bayes_live/app/src/: ant_bayes_live.cpp  main.cpp
main_app/source_lib/: build.xml  makefile
main_app/source_lib/cppsource/: main_app.cpp
main_app/source_lib/cppsource/messaging/: MessageSimulator.cpp  MessageSimulator.h  TestMessageProcessor1.cpp  TestMessageProcessor2.cpp
